== Version 4.6.0

* Removed the mandatory `application_id` parameter from `ShopifyAPI::ProductListing` and `ShopifyAPI::CollectionListing`

== Version 4.6.0

* Added `ShopifyAPI::Report`

== Version 4.5.0

* Added `ShopifyAPI::MarketingEvent`

== Version 4.4.0

* Added `ShopifyAPI::CustomerInvite`
* Support for Customer#send_invite endpoint

== Version 4.3.8

* Added `ShopifyAPI::ResourceFeedback`

== Version 4.3.7

* Added support for `complete` in `ShopifyAPI::DraftOrder`

== Version 4.3.6

* Fixed the `customer_saved_search_id` param in `ShopifyAPI::CustomerSavedSearch#customers`.

== Version 4.3.5

* Added support for online mode access tokens, token expiry, and associated_user information.
* Added `ShopifyAPI::DraftOrder`
* Added `ShopifyAPI::DraftOrderInvoice`

== Version 4.3.4

* Added `ShopifyAPI::ProductListing`
* Added `ShopifyAPI::CollectionListing`

== Version 4.3.3

* Added `ShopifyAPI::StorefrontAccessToken`

== Version 4.3.2

* Relax Ruby version requirement to >= `2.0`

== Version 4.3.1

* Support for ShopifyAPI::ApplicationCredit

== Version 4.3.0

* Require Ruby >= `2.3.0`
* Use inheritance instead of the deprecated Rails `Module#alias_method_chain`

== Version 4.2.2

* Support for AccessToken#delegate endpoint

== Version 4.2.1

* Support for Users and Discounts (Shopify Plus only)
* Adds Customer#account_activation_url method
* Adds ability to open a fulfillment.

== Version 4.2.0

* Threadsafety is now compatible with the latest ActiveResource master

== Version 4.1.1

* Added explicit 90 second timeout to `ShopifyAPI::Base`

== Version 4.0.7

* Added `ShippingAPI::ShippingZone`

== Version 4.0.6

* Replaced `cancelled` with `expired` in `ShopifyAPI::ApplicationCharge`

== Version 4.0.5

* Added `pending`, `cancelled`, `accepted`, `declined` helper methods to `ShopifyAPI::ApplicationCharge`

== Version 4.0.4

* Fixed truthiness for order cancellations. Requests are now sent in the request body and as JSON

== Version 4.0.3
