@@ -1,7 +1,9 @@
 module ShopifyAPI
   class CollectionListing < Base
+    self.primary_key = :collection_id
+
     def product_ids
-      get("#{collection_id}/product_ids")
+      get(:product_ids)
     end
   end
 end
